# ros2_perception_system

./: .gitignore  README.md
perception_system/: CMakeLists.txt  package.xml
perception_system/include/common/: affinity.hpp  frame_rate_stats.hpp  latency_stats.hpp  latest_slot.hpp  match_queue.hpp  trace.hpp  xlogger.hpp
perception_system/include/perception_system/: camera_component.hpp  detector_component.hpp  health_monitor_component.hpp  image_proc_component.hpp  lifecycle_manager.hpp  stage_tracepoint.hpp  stage_tracepoint_tp.hpp  visualize_component.hpp  worker_node.hpp
perception_system/include/perception_system/capture/: capture_source.hpp
perception_system/include/perception_system/inference/: inference_adapter.hpp  trt_context.hpp  trt_engine.hpp
perception_system/include/perception_system/preprocessing/: letterbox_cuda.hpp  preprocessor.hpp
perception_system/include/perception_system/visualize/: visualizer.hpp  yolov8_postprocess.hpp
perception_system/launch/: perception_system.launch.py
perception_system/src/: camera_component.cpp  detector_component.cpp  health_monitor_component.cpp  image_proc_component.cpp  lifecycle_manager.cpp  perception_container.cpp  stage_tracepoint_provider.cpp  visualize_component.cpp
perception_system/src/capture/: capture_source.cpp
perception_system/src/inference/: inference_adapter.cpp  trt_context.cpp  trt_engine.cpp
perception_system/src/interfaces/msg/: InferenceResult.msg  ProcessedImage.msg  TraceStamp.msg
perception_system/src/interfaces/srv/: ResetNode.srv
perception_system/src/preprocessing/: letterbox_cuda.cu  preprocessor.cpp
perception_system/src/visualize/: visualizer.cpp  yolov8_postprocess.cpp
